[tool.poetry]
name = "contort"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
pandas = "^2.1.3"
psycopg2 = "^2.9.9"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
django-dbbackup = "^4.0.2"
gunicorn = "^21.2.0"
hiredis = "^2.2.3"
redis = "^5.0.1"
django-redis = "^5.4.0"
whitenoise = "^6.6.0"
django-ninja = "^1.0.1"
django-sendfile2 = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
