[tool.poetry]
name = "contort"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.4"
pandas = "^2.1.3"
psycopg2 = "^2.9.9"
django-filter = "^24.3"
django-cors-headers = "^4.3.1"
django-dbbackup = "^4.0.2"
gunicorn = "^23.0.0"
hiredis = "^3.1.0"
redis = "^5.0.1"
django-redis = "^5.4.0"
whitenoise = "^6.6.0"
django-ninja = "^1.0.1"
django-sendfile2 = "^0.7.0"
django-rq = "^3.0.0"
django-ninja-jwt = "^5.3.5"
djangorestframework = "^3.15.2"
markdown = "^3.7"
djangorestframework-simplejwt = "^5.4.0"
drf-chunked-upload = "^0.6.0"
requests = "^2.32.3"
uvicorn = "^0.34.0"
uvicorn-worker = "^0.3.0"
channels = "^4.2.0"
websockets = "^14.1"
channels-redis = {extras = ["cryptography"], version = "^4.2.1"}
django-allauth = "^65.3.1"
fido2 = "^1.2.0"
verbose-csrf-middleware = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
